[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_handle_object.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_cloud_upload.svg" type="Texture" id=2]

[node name="StepUpdateConfig" type="GraphNode"]
margin_top = 44.0
margin_right = 188.0
margin_bottom = 135.0
mouse_filter = 1
title = "Save JSON Object"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color( 1, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color( 1, 1, 1, 1 )
slot/9/left_enabled = false
slot/9/left_type = 0
slot/9/left_color = Color( 1, 1, 1, 1 )
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 107.0
margin_top = 34.0
margin_right = 128.0
margin_bottom = 55.0
rect_min_size = Vector2( 21, 21 )
size_flags_horizontal = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VariableLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 59.0
margin_right = 228.0
margin_bottom = 80.0
text = "variable name:"

[node name="VariableEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 84.0
margin_right = 228.0
margin_bottom = 117.0

[node name="ConfigLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 121.0
margin_right = 228.0
margin_bottom = 142.0
text = "config key:"

[node name="ConfigEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 146.0
margin_right = 228.0
margin_bottom = 179.0
placeholder_text = "e.g. resoto.core"

[node name="PathLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 183.0
margin_right = 228.0
margin_bottom = 204.0
text = "path in config:"

[node name="PathEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 208.0
margin_right = 228.0
margin_bottom = 241.0
rect_min_size = Vector2( 220, 0 )
placeholder_text = "e.g. resotocore.api.ui_path"

[node name="ActionLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 245.0
margin_right = 228.0
margin_bottom = 266.0
text = "action:"

[node name="ActionOption" type="OptionButton" parent="."]
margin_left = 8.0
margin_top = 270.0
margin_right = 228.0
margin_bottom = 303.0
text = "merge"
items = [ "merge", null, false, 0, null, "append", null, false, 1, null, "set", null, false, 2, null ]
selected = 0

[node name="WrapArrayCheckbox" type="CheckBox" parent="."]
margin_left = 8.0
margin_top = 307.0
margin_right = 228.0
margin_bottom = 340.0
text = "Wrap in Array"

[connection signal="item_selected" from="ActionOption" to="." method="_on_ActionOption_item_selected"]
[connection signal="toggled" from="WrapArrayCheckbox" to="." method="_on_WrapArrayCheckbox_toggled"]
